- Changed all occurences of 'lite' to 'light' in object.lua. (pelpel)
- Altered the standard makefile to allow other compilers to be
  intergrated into it more easily. (takkaria)
- Got all (non-lua) code compiling with TCC 0.9.8 - 0.9.9 segfaults on
  randart.c, but 0.9.8 has parsing problems with the lua header files.
  Hopefully 1.0.0 will compile Angband completely cleanly. (takkaria)

2002-07-28
----------
- generate_cave() didn't clear the cave_info2 array, causing various weird
  effects. (pelpel)
- Broken doors don't count for the purpose of easy open/close, because the
  game offers ways to tell them from open doors, and I feel it's mildly
  annoying to be asked to choose them only to get the responce telling me
  I can't do so. (pelpel)

2002-07-27
----------
- Added the monster light code, mixing the Z and Tome one (which is based
  on the former), with necessary modifications to make it work with the GRID
  macros. Please note that "if (view_monster_light)" is commented out in
  xtra1.c because it isn't defined yet. (pelpel)

2002-07-23
----------
- Tweaked some stuff at start.  Astral characters don't start with torches
  any more, but instead start with ((random number from 15 to 17) * 5)
  identify scrolls.  They also have slight bonuses to their weapons. (takkaria) 

2002-07-22
----------
- New option: "pseudo_light". Pseudo-ID type is no longer based on class.
  Instead, if this option is off, your character will have 'heavy'
  pseudo-ID and will therefore sense {average}, {special}, etc.... If
  on, you will only sense lightly, but will have a score advantage.
  (takkaria; idea taken from Gumband)
- Changed the total_score() code so it now gives much more "specific"
  scores; inventory+equipment cost is counted, and options give score modifiers.
  (takkaria)

2002-07-18
----------
- Divorced the new CAVE_TDETECT flag from cave_info[][]; it is now in 
  cave_info2[][].  This is for efficiency.  The savefile code doesn't handle